evm: reorganize sample env

--- a/evm/env/.env.sample
+++ b/evm/env/.env.sample
@@ -1,20 +1,35 @@
 export RPC=""
 
+### Foundry profile, we always need to deploy with prod.
+export FOUNDRY_PROFILE=prod
+
+# -------------------------- NTT Contract --------------------------
+
 ### EVM Token Address
 export RELEASE_TOKEN_ADDRESS=
 
 ### Mode (Locking == 0, Burning == 1)
 export RELEASE_MODE=0
 
-### Wormhole Chain ID
-export RELEASE_WORMHOLE_CHAIN_ID=10002
-
 ### Rate Limit Duration (specified in seconds)
 export RELEASE_RATE_LIMIT_DURATION=86400
 export RELEASE_SKIP_RATE_LIMIT=false
 
+### Rolling Window Max Outbound Transfer Limit
+export RELEASE_OUTBOUND_LIMIT=0
+
+# -------------------------- Wormhole --------------------------
+
+### Wormhole Chain ID
+export RELEASE_WORMHOLE_CHAIN_ID=10002
+
 ### Wormhole Core Bridge Address
 export RELEASE_CORE_BRIDGE_ADDRESS=0x4a8bc80Ed5a4067f1CCf107057b8270E0cC11A78
+
+### Wormhole Finality
+export RELEASE_CONSISTENCY_LEVEL=201
+
+# -------------------------- Relayer --------------------------
 
 ### Wormhole Relayer Address
 export RELEASE_WORMHOLE_RELAYER_ADDRESS=0x7B1bD7a6b4E61c2a123AC6BC2cbfC614437D0470
@@ -22,14 +37,5 @@ export RELEASE_WORMHOLE_RELAYER_ADDRESS=0x7B1bD7a6b4E61c2a123AC6BC2cbfC614437D04
 ### Specialized Relayer Address
 export RELEASE_SPECIAL_RELAYER_ADDRESS=0x0000000000000000000000000000000000000000
 
-### Wormhole Finality
-export RELEASE_CONSISTENCY_LEVEL=201
-
 ### Target Chain Gas Limit
 export RELEASE_GAS_LIMIT=250000
-
-### Rolling Window Max Outbound Transfer Limit
-export RELEASE_OUTBOUND_LIMIT=0
-
-### Foundry profile, we always need to deploy with prod.
-export FOUNDRY_PROFILE=prod
